# AIRBNB-CLONE-BACKEND

./: pyproject.toml
common/: models.py
config/: settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_tweet_payload.py  0003_alter_tweet_payload.py
tweets/templates/tweets/: tweets_list.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
